--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -5,5 +5,4 @@
     android:name="com.google.android.gms.maps.SupportMapFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.khalid.sharektest.MapsActivity"
-    tools:layout="@layout/content_my_profile" />
+    tools:context="com.example.khalid.sharektest.MapsActivity" />
