--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -47,12 +47,8 @@
         android:text="Do not have an account ?"
         android:id="@+id/textView"
 
-        android:layout_marginLeft="20dp"
-        android:layout_marginStart="20dp"
         android:layout_below="@+id/LoginPage_Login_button"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="37dp" />
+        android:layout_centerHorizontal="true" />
 
     <Button
         style="?android:attr/buttonStyleSmall"
@@ -60,11 +56,8 @@
         android:layout_height="wrap_content"
         android:text="Sign Up"
         android:id="@+id/LoginPage_SignUp_button"
-        android:layout_marginLeft="19dp"
-        android:layout_marginStart="19dp"
-        android:layout_alignTop="@+id/textView"
-        android:layout_toRightOf="@+id/textView"
-        android:layout_toEndOf="@+id/textView" />
+        android:layout_above="@+id/LoginPage_Skip_button"
+        android:layout_centerHorizontal="true" />
 
     <Button
         android:layout_width="wrap_content"
