--- a/app/src/main/res/layout/content_my_profile.xml
+++ b/app/src/main/res/layout/content_my_profile.xml
@@ -13,87 +13,14 @@
         android:layout_alignParentStart="true"
         android:id="@+id/relativeLayout">
 
-        <LinearLayout
+        <RelativeLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:weightSum="1"
             android:id="@+id/linearLayout"
-            android:layout_below="@+id/appbar"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true">
-
-            <ImageView
-                android:layout_width="63dp"
-                android:layout_height="80dp"
-                android:id="@+id/imageView2"
-                android:src="@mipmap/ic_launcher"
-                android:layout_weight="0.62" />
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="253dp"
-                android:layout_height="161dp"
-                android:layout_alignParentTop="true">
-
-
-                <TableLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignTop="@+id/linearLayout"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentEnd="true">
-
-                    <TableRow
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textAppearance="?android:attr/textAppearanceLarge"
-                            android:text="Name :  "
-                            android:id="@+id/textView3" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textAppearance="?android:attr/textAppearanceLarge"
-                            android:text="c"
-                            android:id="@+id/textView5"
-                            android:layout_column="12" />
-                    </TableRow>
-                    <TableRow
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
-
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textAppearance="?android:attr/textAppearanceLarge"
-                            android:text="Points  : "
-                            android:id="@+id/textView6"
-                            android:layout_column="0" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textAppearance="?android:attr/textAppearanceLarge"
-                            android:text="Large Text"
-                            android:id="@+id/textView8"
-                            android:layout_column="12" />
-                    </TableRow>
-
-
-                </TableLayout>
-            </LinearLayout>
-        </LinearLayout>
-        <android.support.design.widget.AppBarLayout
-            android:id="@+id/appbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingTop="@dimen/appbar_padding_top"
-            android:theme="@style/AppTheme.AppBarOverlay">
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
@@ -101,11 +28,43 @@
                 android:layout_height="?attr/actionBarSize"
                 android:background="?attr/colorPrimary"
                 app:layout_scrollFlags="scroll|enterAlways"
-                app:popupTheme="@style/AppTheme.PopupOverlay">
+                app:popupTheme="@style/AppTheme.PopupOverlay"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true">
 
             </android.support.v7.widget.Toolbar>
 
-        </android.support.design.widget.AppBarLayout>
+            <ImageView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:id="@+id/myprofile_profipic_imageView2"
+                android:src="@mipmap/ic_launcher"
+                android:layout_weight="0.62"
+                android:layout_below="@+id/toolbar"
+                android:layout_centerHorizontal="true" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Medium Text"
+                android:id="@+id/myprofile_name_textView"
+                android:layout_below="@+id/myprofile_profipic_imageView2"
+                android:layout_alignLeft="@+id/myprofile_profipic_imageView2"
+                android:layout_alignStart="@+id/myprofile_profipic_imageView2" />
+
+            <ImageButton
+                style="?android:attr/buttonStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/myprofile_change_button"
+                android:background="@drawable/ic_add_black_18dp"
+                android:layout_above="@+id/myprofile_name_textView"
+                android:layout_alignRight="@+id/myprofile_profipic_imageView2"
+                android:layout_alignEnd="@+id/myprofile_profipic_imageView2"
+                />
+        </RelativeLayout>
 
         <android.support.v4.view.ViewPager
             android:id="@+id/container"
@@ -124,6 +83,7 @@
             android:layout_below="@+id/linearLayout"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
+
     </RelativeLayout>
 
 
