--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.khalid.sharektest.SignUp">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
 
     <TableLayout
         android:layout_width="match_parent"
@@ -15,7 +20,9 @@
         android:id="@+id/tableLayout"
         android:layout_below="@+id/signup_propic_imageView"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true">
 
         <TableRow
             android:layout_width="match_parent"
@@ -75,6 +82,50 @@
                 android:id="@+id/signup_username_editText"
                 android:layout_column="1"
                 android:hint="User Name" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Password"
+                android:id="@+id/textView19"
+                android:layout_column="0" />
+
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:ems="10"
+                android:id="@+id/signup_password_editText"
+                android:layout_column="1"
+                android:hint="Password" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Repassword"
+                android:id="@+id/textView20"
+                android:layout_column="0" />
+
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:ems="10"
+                android:id="@+id/signup_repassword_editText2"
+                android:layout_column="1"
+                android:hint="Repassword" />
         </TableRow>
 
         <TableRow
@@ -206,7 +257,7 @@
         android:layout_height="wrap_content"
         android:text="Sign Up"
         android:id="@+id/signup_signup_button"
-        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/signup_checkBox"
         android:layout_toRightOf="@+id/signup_propic_imageView"
         android:layout_toEndOf="@+id/signup_propic_imageView" />
 
@@ -216,8 +267,9 @@
         android:layout_height="wrap_content"
         android:text="Get Location"
         android:id="@+id/signup_getlocation_button"
-        android:layout_alignTop="@+id/signup_signup_button"
+        android:layout_alignParentBottom="true"
         android:layout_toLeftOf="@+id/signup_propic_imageView"
         android:layout_toStartOf="@+id/signup_propic_imageView" />
+    </RelativeLayout>
 
-</RelativeLayout>
+</ScrollView>
