--- a/app/src/main/res/layout/activity_add_intrest.xml
+++ b/app/src/main/res/layout/activity_add_intrest.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:id="@+id/addshare_sharetitle_textView12"
+        android:id="@+id/addintrest_title_textView12"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -25,23 +25,23 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_below="@+id/addshare_sharetitle_textView12"
+        android:layout_below="@+id/addintrest_title_textView12"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:id="@+id/linearLayout3">
 
-        <Spinner
-            android:layout_width="wrap_content"
+        <EditText
+            android:layout_width="174dp"
             android:layout_height="40dp"
-            android:id="@+id/addintrest_catagory_spinner"
-            android:layout_weight=".5"
-            android:spinnerMode="dropdown" />
+            android:id="@+id/addintrest_tags_edittext"
+            android:hint="Tags" />
 
         <Spinner
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:id="@+id/addintrest_gender_spinner2"
-            android:layout_weight=".5" />
+            android:layout_weight=".5"
+            android:layout_gravity="right" />
     </LinearLayout>
 
     <LinearLayout
@@ -83,17 +83,17 @@
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:id="@+id/addintrest_Country_textView14"
+            android:id="@+id/addintrest_minprice_textView15"
             android:layout_weight="0.77"
-            android:hint="Country" />
+            android:hint="Min Price" />
 
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:id="@+id/addintrest_city_textView15"
+            android:id="@+id/addintrest_maxprice_textView15"
             android:layout_weight="1"
-            android:hint="City" />
+            android:hint="Max Price" />
     </LinearLayout>
 
     <EditText
