--- a/app/src/main/res/layout/activity_add_share.xml
+++ b/app/src/main/res/layout/activity_add_share.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:id="@+id/addshare_sharetitle_textView12"
+        android:id="@+id/addintrest_title_textView12"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -24,7 +24,7 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_below="@+id/addshare_sharetitle_textView12"
+        android:layout_below="@+id/addintrest_title_textView12"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:id="@+id/linearLayout3">
@@ -57,17 +57,19 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:id="@+id/addshare_price_textView13"
-            android:layout_weight="0.79"
-            android:hint="Price" />
+            android:id="@+id/addshare_tags_textView13"
+            android:layout_weight="1"
+            android:hint="cars#books#alse" />
 
-        <Spinner
-            android:layout_width="160dp"
-            android:layout_height="match_parent"
-            android:id="@+id/addshare__duration_spinner3"
-            android:layout_weight="0.16"
-            android:layout_gravity="center_vertical"
-            android:spinnerMode="dropdown" />
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/addshare__duration_edittext"
+            android:layout_above="@+id/linearLayout5"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_weight="2"
+            android:hint="Duration" />
 
     </LinearLayout>
 
@@ -84,17 +86,17 @@
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:id="@+id/addshare_Country_textView14"
+            android:id="@+id/addshare_minprice_textView14"
             android:layout_weight="0.77"
-            android:hint="Country" />
+            android:hint="Min Price" />
 
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:id="@+id/addshare_city_textView15"
+            android:id="@+id/addshare_maxprice_textView15"
             android:layout_weight="1"
-            android:hint="City" />
+            android:hint="Max Price" />
     </LinearLayout>
 
     <EditText
