--- a/app/src/main/res/layout/custom_row_common_tags.xml
+++ b/app/src/main/res/layout/custom_row_common_tags.xml
@@ -19,7 +19,9 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_marginTop="20dp"
-            android:layout_marginLeft="30dp" />
+            android:layout_marginLeft="30dp"
+            android:textSize="25dp"
+            android:textStyle="normal|bold" />
 
         <TextView
             android:layout_width="wrap_content"
