--- a/app/src/main/res/layout/activity_add_intrest.xml
+++ b/app/src/main/res/layout/activity_add_intrest.xml
@@ -10,159 +10,160 @@
     tools:context="com.example.khalid.sharektest.AddIntrest">
 
     <EditText
+        android:id="@+id/addintrest_title_textView12"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:id="@+id/addintrest_title_textView12"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:hint="Intrest Title" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:hint="Intrest Title"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <LinearLayout
-        android:orientation="horizontal"
+        android:id="@+id/linearLayout3"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_below="@+id/addintrest_title_textView12"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:id="@+id/linearLayout3">
+        android:layout_below="@+id/addintrest_title_textView12"
+        android:orientation="horizontal">
 
         <EditText
+            android:id="@+id/addintrest_tags_edittext"
             android:layout_width="174dp"
             android:layout_height="40dp"
-            android:id="@+id/addintrest_tags_edittext"
             android:hint="Tags" />
 
         <Spinner
+            android:id="@+id/addintrest_gender_spinner2"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
-            android:id="@+id/addintrest_gender_spinner2"
-            android:layout_weight=".5"
-            android:layout_gravity="right" />
+            android:layout_gravity="right"
+            android:layout_weight=".5" />
     </LinearLayout>
 
     <LinearLayout
-        android:orientation="horizontal"
+        android:id="@+id/linearLayout4"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_below="@+id/linearLayout3"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:id="@+id/linearLayout4">
+        android:layout_below="@+id/linearLayout3"
+        android:orientation="horizontal">
 
         <Spinner
+            android:id="@+id/addintrest__duration_spinner3"
             android:layout_width="160dp"
             android:layout_height="match_parent"
-            android:id="@+id/addintrest__duration_spinner3"
-            android:layout_weight="0.16"
             android:layout_gravity="center_vertical"
+            android:layout_weight="0.16"
             android:spinnerMode="dropdown" />
 
         <EditText
+            android:id="@+id/addintrest_durationtime_textView13"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:id="@+id/addintrest_durationtime_textView13"
             android:layout_weight="0.79"
-            android:hint="Duration Time" />
+            android:hint="Duration Time"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
     </LinearLayout>
 
     <LinearLayout
-        android:orientation="horizontal"
+        android:id="@+id/linearLayout5"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_below="@+id/linearLayout4"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:id="@+id/linearLayout5">
+        android:layout_below="@+id/linearLayout4"
+        android:orientation="horizontal">
 
         <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:textAppearance="?android:attr/textAppearanceMedium"
             android:id="@+id/addintrest_minprice_textView15"
-            android:layout_weight="0.77"
-            android:hint="Min Price" />
-
-        <EditText
             android:layout_width="wrap_content"
             android:layout_height="40dp"
-            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:layout_weight="0.77"
+            android:hint="Min Price"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+
+        <EditText
             android:id="@+id/addintrest_maxprice_textView15"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
             android:layout_weight="1"
-            android:hint="Max Price" />
+            android:hint="Max Price"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
     </LinearLayout>
 
     <EditText
+        android:id="@+id/addshare_description_textView16"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:id="@+id/addshare_description_textView16"
-        android:layout_below="@+id/linearLayout5"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:hint="Description" />
+        android:layout_below="@+id/linearLayout5"
+        android:hint="Description"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
     <View
         android:layout_width="fill_parent"
         android:layout_height="2dp"
-        android:background="#c0c0c0"
         android:layout_above="@+id/linearLayout6"
+        android:layout_alignParentEnd="false"
         android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="false"
         android:layout_alignParentStart="false"
         android:layout_below="@+id/addshare_description_textView16"
-        android:layout_alignParentEnd="false" />
+        android:background="#c0c0c0" />
 
     <LinearLayout
-        android:orientation="vertical"
+        android:id="@+id/linearLayout6"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:id="@+id/linearLayout6"
         android:layout_above="@+id/addshare_post_button"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:orientation="vertical">
 
         <EditText
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:textAppearance="?android:attr/textAppearanceLarge"
             android:id="@+id/addintrest_name_textView17"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:hint="Name"
             android:inputType="textPersonName"
-            android:hint="Name" />
+            android:textAppearance="?android:attr/textAppearanceLarge" />
 
         <EditText
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:inputType="textEmailAddress"
             android:id="@+id/addintrest_email_textView18"
-            android:hint="Email" />
-
-        <EditText
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:inputType="phone"
-            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:hint="Email"
+            android:inputType="textEmailAddress"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+        <EditText
             android:id="@+id/addintrest_phone_textView19"
-            android:hint="Phone" />
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:hint="Phone"
+            android:inputType="phone"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
 
         <CheckBox
+            android:id="@+id/addintrest_checkBox2"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:text="I agree to the terms and conditions"
-            android:id="@+id/addintrest_checkBox2"
-            android:checked="false" />
+            android:checked="false"
+            android:text="I agree to the terms and conditions" />
 
     </LinearLayout>
 
     <Button
+        android:id="@+id/addshare_post_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Post Intrest"
-        android:id="@+id/addshare_post_button"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:text="Post Intrest" />
 
 </RelativeLayout>
