--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/login_bg"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -12,61 +13,70 @@
     tools:context="com.example.khalid.sharektest.MainActivity"
     tools:showIn="@layout/activity_main">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Skip Login"
-        android:id="@+id/LoginPage_Skip_button"
-        android:layout_marginBottom="52dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
-
     <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/LoginPage_UserName_editText"
+        android:layout_width="300sp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/imageView"
+        android:layout_marginTop="36dp"
+        android:backgroundTint="@color/underline"
         android:hint="User name"
-        android:layout_alignParentTop="true"
-        android:layout_alignLeft="@+id/LoginPage_Skip_button"
-        android:layout_alignStart="@+id/LoginPage_Skip_button"
-        android:layout_marginTop="25dp" />
+        android:textColorHighlight="@color/colorPrimary"
+        android:textColorHint="@color/colorPrimary" />
 
     <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPassword"
         android:id="@+id/LoginPage_Password_editText"
+        android:layout_width="300sp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
+        android:backgroundTint="@color/underline"
         android:hint="Password"
-        android:layout_below="@+id/LoginPage_UserName_editText"
-        android:layout_alignLeft="@+id/LoginPage_UserName_editText"
-        android:layout_alignStart="@+id/LoginPage_UserName_editText"
-        android:layout_marginTop="76dp" />
+        android:inputType="textPassword"
+        android:textColorHighlight="@color/colorPrimary"
+        android:textColorHint="@color/colorPrimary"
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Do not have an account ?"
-        android:id="@+id/textView"
-
-        android:layout_below="@+id/LoginPage_Login_button"
-        android:layout_centerHorizontal="true" />
+        />
 
     <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Sign Up"
-        android:id="@+id/LoginPage_SignUp_button"
-        android:layout_above="@+id/LoginPage_Skip_button"
-        android:layout_centerHorizontal="true" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Login"
         android:id="@+id/LoginPage_Login_button"
-        android:layout_marginTop="38dp"
-        android:layout_below="@+id/LoginPage_Password_editText"
-        android:layout_alignRight="@+id/LoginPage_Skip_button"
-        android:layout_alignEnd="@+id/LoginPage_Skip_button" />
+        android:layout_width="300sp"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/LoginPage_SignUp_button"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="25dp"
+        android:background="@color/white"
+        android:text="Login"
+
+        />
+
+    <Button
+        android:id="@+id/LoginPage_SignUp_button"
+        android:layout_width="300sp"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/LoginPage_Skip_button"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="23dp"
+        android:background="@color/white"
+        android:text="Don't have account? Sign Up" />
+
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="26dp"
+        android:src="@drawable/sign_up_page" />
+    <Button
+        android:id="@+id/LoginPage_Skip_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:background="@color/white"
+        android:text="Skip Login" />
+
 </RelativeLayout>
