--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#E91E63</color>
+    <color name="colorPrimary">#DE6356</color>
     <color name="colorPrimaryDark">#FCE4EC</color>
     <color name="colorAccent">#FF4081</color>
     <color name="white">#FFFF</color>
+    <color name="background">#f5f5f5</color>
+    <color name="underline">#FFEBCD</color>
+
 
 </resources>
